--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,34 @@
+version: '3.8'
+
 services:
   backend:
     build:
       context: .
       dockerfile: backend/Dockerfile
+    image: rag-backend:latest
+    container_name: rag-backend
     ports:
       - "8000:8000"
+    volumes:
+      - ./data:/app/data
+      - ./chroma_db:/app/chroma_db
+      - ./logs:/app/logs
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - LANGCHAIN_TRACING_V2=${LANGCHAIN_TRACING_V2}
       - LANGCHAIN_API_KEY=${LANGCHAIN_API_KEY}
-      - LANGCHAIN_PROJECT=${LANGCHAIN_PROJECT}
-    volumes:
-      - ./backend:/app
     restart: unless-stopped
 
   frontend:
     build:
       context: .
       dockerfile: frontend/Dockerfile
+    image: rag-frontend:latest
+    container_name: rag-frontend
     ports:
       - "8501:8501"
+    depends_on:
+      - backend
     environment:
-      - BACKEND_URL=http://host.docker.internal:8000
-    volumes:
-      - ./frontend:/app
+      - API_BASE_URL=http://backend:8000/api/v1
     restart: unless-stopped
