docker file updated

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,26 +1,21 @@
 FROM python:3.10-slim
 
-# Change APT sources to use Fastly's CDN, which is much faster globally
-RUN echo "deb https://cdn-fastly.debian.org/debian/ bullseye main" > /etc/apt/sources.list && \
-    echo "deb https://cdn-fastly.debian.org/debian/ bullseye-updates main" >> /etc/apt/sources.list && \
-    echo "deb https://security.debian.org/debian-security bullseye-security main" >> /etc/apt/sources.list
-
-# Original apt-get step (will now be much faster)
 RUN apt-get update && apt-get install -y build-essential && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY requirements.txt /app/requirements.txt
 
-# Install uv, a high-speed package installer
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir uv
+# Install uv
+RUN pip install --no-cache-dir uv
 
-# Use uv to install the requirements
-RUN uv pip install --no-cache --system -r /app/requirements.txt
+# Use uv to install all packages
+RUN uv pip install --system --no-cache -r /app/requirements.txt
 
+# Copy your application code
 COPY . /app
 
 ENV PYTHONUNBUFFERED=1
 
-CMD ["streamlit", "run", "app.py", "--server.port", "8501", "--server.address", "0.0.0.0"]
+# Use "python -m" to avoid "command not found" errors
+CMD ["python", "-m", "streamlit", "run", "app.py", "--server.port", "8501", "--server.address", "0.0.0.0"]
