--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,20 +2,22 @@ FROM python:3.10-slim
 
 RUN apt-get update && apt-get install -y build-essential && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
+WORKDIR /code
 
-COPY requirements.txt /app/requirements.txt
+# Copy requirements first
+COPY backend/requirements.txt /code/backend/requirements.txt
 
 # Install uv
 RUN pip install --no-cache-dir uv
 
-# Use uv to install all packages (this is the fast part)
-RUN uv pip install --system --no-cache -r /app/requirements.txt
+# Install all packages
+RUN uv pip install --system --no-cache -r /code/backend/requirements.txt
 
-# Copy your application code
-COPY . /app
+# Copy the backend directory
+COPY backend/ /code/backend/
 
 ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=/code
 
-# This is the corrected line:
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run uvicorn
+CMD ["python", "-m", "uvicorn", "backend.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
